# solar_buggy

./: .gitignore  CMakeLists.txt  buggy.launch  config.json  package.xml
arduino/: imu_cal.txt
arduino/Razor_AHRS/: Output.ino  Razor_AHRS.ino  imu_cal.txt
arduino/buggy/: buggy.ino
arduino/gps_ultra/: gps_ultra.ino
arduino/gps_ultra_imu/: gps_ultra_imu.ino
arduino/solar_buggy/: RollingSum.cpp  RollingSum.h  gps.ino  imu.ino  output.ino  solar_buggy.ino  ultra.ino
arduino/ultra/: ultra.ino
devel/: .catkin  .rosinstall  setup.sh
devel/include/solar_buggy/: Controller.h  ControllerRequest.h  ControllerResponse.h
devel/lib/pkgconfig/: solar_buggy.pc
install/: setup.sh
install/include/solar_buggy/: Controller.h  ControllerResponse.h
msg/: GeoPose.msg  Pose.msg  RelationalWayPoint.msg  Ultrasonic.msg
scripts/: camera.py  camera_old.py  controller.py  controller.py.backup  get_config.py  gps.py  priority.py  read_serial.py  telemetry.py  ultra_dupe.py  ultrasonic.py
server/: data.txt  first.py
server/settings/: initial_coordinates.json  telemetry.json
server/templates/: .index.html.swp  index.html
solar_buggy/: CMakeLists.txt  buggy.launch  config.json  package.xml
solar_buggy/msg/: GPS.msg  Ultrasonic.msg
solar_buggy/scripts/: controller.py  move_vehicle.py  read_serial.py  simulate_ultrasonic.py  test.py  ultrasonic.py
solar_buggy/srv/: Controller.srv
src/solar_buggy/: buggy.launch  config.json
src/solar_buggy/scripts/: controller.py  infared.py  move_vehicle.py  (+2 more)
srv/: UpdateWaypoint.srv
testing/: arduino.json  gprmc.txt
(+20 files in other folders)
